	chio and HPUX are implemented.
	-Eric Schnoebelen <eric@cirr.com>

	Numerous bugs/errors were fixed in chg-chio/chg-scsi.  it now
	properly responds to -eject requests, among other things.
	-Eric Schnoebelen <eric@cirr.com>

	use vdump to dump advfs filesystems only.
	-Martyn Johnson <Martyn.Johnson@cl.cam.ac.uk> & oliva

	new index generation commands.  -oliva

Version 2.4.0

	fixed tape block size of vxdump on HPUX 10.20.
	-Andrew Ivanov <ivanov@mics.msu.su>

	Use "a" mode instead of "w" for the fdopen of the debug file.
	-David Lamkin <drl@net-tel.co.uk>

	allow multiple concurrent gnutar backups, by fixing amandates
	locking mechanism.
	-Liudvikas Bukys <bukys@cs.rochester.edu> & oliva

	amdump should check for a hold file, as says the man-page.
	-oliva

	fix automatic enabling of USE_RUNDUMP for systems that require
	this.  xfsdump support no longer requires USE_RUNDUMP to be
	defined, rundump will be enabled and used for xfs filesystems
	even if USE_RUNDUMP is not defined, unless XFSDUMP is not defined.
	This seems to have completely solved the xfsdump problems.
	-oliva

	when USE_RUNDUMP is enabled, instead of checking for read or write
	access in selfcheck, just test for the existence of disk devices.
	-oliva

	fixed code that computed the dump size when incomplete
	writes occurred in dumper.  -Eric Siegerman <erics@now.com>

	amplot no longer crashes if there's no holding disk. -oliva

Version 2.4.0b6p2

	fix xfsdump index generation command.
	-Robert Tarrall <tarrall@bamboo.colorado.edu>

	tape device wouldn't rewind if opened O_WRONLY.
	-Palle Girgensohn <girgen@partitur.se> & oliva

	use setpgid instead of setpgrp if available
	-Mark Woodford <woodford@uniprise.com> & oliva

	chg-mtx will check whether slot 6 is a cleaning tape or not.
	-Martyn Johnson <Martyn.Johnson@cl.cam.ac.uk>

	amrmtape updated to text database.  -oliva

	incorrect NO-ROOM error when dumping directly to tape fixed.
	-oliva
